# azure-sql-db-tools

./: .gitignore  .pre-commit-config.yaml  README.md  config-example.toml  pyproject.toml
src/azure_sql_db_tools/: __init__.py  __main__.py  cli.py  config.py  logs_client.py  rich_utils.py
